--- a/admin/css/like-button-for-wordpress-admin.css
+++ b/admin/css/like-button-for-wordpress-admin.css
@@ -1,3 +1,12 @@
+/**
+ * CSS for the Like Button For Wordpress plugin admin area
+ *
+ * Styles have been kept minimal to best accommodate differing theme implementations
+ * Style naming follows BEM notation
+ *
+ * @package LBFW
+ */
+
 #like-button-for-wordpress-data {
     width:  100%;
 }
