Added CSS styling

--- a/assets/css/like-button-for-wordpress.css
+++ b/assets/css/like-button-for-wordpress.css
@@ -6,3 +6,26 @@
  *
  * @package LBFW
  */
+ .u-icon {
+   /* use !important to prevent issues with browser extensions that change fonts */
+   font-family: nta,sans-serif;
+   speak: none;
+   font-size: 2.2rem;
+   font-style: normal;
+   font-weight: normal;
+   font-variant: normal;
+   text-transform: none;
+   line-height: 1;
+
+   /* Better Font Rendering =========== */
+   -webkit-font-smoothing: antialiased;
+   -moz-osx-font-smoothing: grayscale;
+ }
+
+
+
+ .u-icon--thumbs-o-up:before {
+   content: "\f087";
+   padding-top: 4px;
+   padding-right: 4px;
+ }
