--- a/assets/css/like-button-for-wordpress.css
+++ b/assets/css/like-button-for-wordpress.css
@@ -6,24 +6,46 @@
  *
  * @package LBFW
  */
- .u-icon {
-   /* use !important to prevent issues with browser extensions that change fonts */
-   font-size: 2.1rem;
-   font-style: normal;
-   font-weight: normal;
-   font-variant: normal;
-   text-transform: none;
-   line-height: 1;
 
-   /* Better Font Rendering =========== */
-   -webkit-font-smoothing: antialiased;
-   -moz-osx-font-smoothing: grayscale;
- }
+/* Button reset =========== */
 
+button, input[type="submit"], input[type="reset"] {
+  background: none !important;
+  color: grey;
+  border: none;
+  padding: 0! important;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit !important;
+}
 
+.u-icon {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-size: 2.1rem;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 
- .u-icon--thumbs-o-up:before {
-   content: "\f087";
-   padding-top: 4px;
-   padding-right: 4px;
- }
+.u-icon--thumbs-o-up:before {
+  content: "\f087";
+  padding-right: 2px;
+  font-size: 1.8rem;
+}
+
+.like-button-number {
+  font-size: 2.1rem;
+}
+
+.like-button-count {
+  color: #005ea5;
+}
+
+.like-button-count-clicked {
+  color: grey;
+}
